@@ -9,58 +9,6 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>${jar.plugin.version}</version>
-          <configuration>
-            <finalName>test</finalName>
-            <archive>
-              <manifestEntries>
-                <Premain-class>com.cds.utils.SizeOfObject</Premain-class>
-                <Boot-Class-Path></Boot-Class-Path>
-                <Can-Redefine-Classes>false</Can-Redefine-Classes>
-              </manifestEntries>
-              <addMavenDescriptor>false</addMavenDescriptor>
-            </archive>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>${dependency.plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>${jetty.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
-          <configuration>
-            <source>${compileSource}</source>
-            <target>${compileSource}</target>
-            <showWarnings>true</showWarnings>
-            <showDeprecation>false</showDeprecation>
-            <compilerArgument>-Xlint:-options</compilerArgument>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>${assembly.plugin.version}</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  <modules>
-    <module>scala-utils</module>
-  </modules>
   <properties>
     <compileSource>1.8</compileSource>
     <jersey.version>2.22.1</jersey.version>
@@ -76,7 +24,7 @@
     <hadoop.version>2.5.2</hadoop.version>
     <hbase.version>0.98.6-hadoop2</hbase.version>
     <kafka.version>0.8.2.2</kafka.version>
-    <scala.version>2.10.4</scala.version>
+    <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
     <commons-lang.version>2.6</commons-lang.version>
     <commons.configuration.version>1.10</commons.configuration.version>
@@ -115,7 +63,114 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <http.version>4.5.2</http.version>
     <quartz.version>2.2.2</quartz.version>
+    <fastjson.version>1.2.28</fastjson.version>
+    <PermGen>64m</PermGen>
+    <MaxPermGen>512m</MaxPermGen>
   </properties>
+
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>${jar.plugin.version}</version>
+        <configuration>
+          <finalName>test</finalName>
+          <archive>
+            <manifestEntries>
+              <Premain-class>com.cds.utils.SizeOfObject</Premain-class>
+              <Boot-Class-Path></Boot-Class-Path>
+              <Can-Redefine-Classes>false</Can-Redefine-Classes>
+            </manifestEntries>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>${dependency.plugin.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <!--<version>3.6.1</version>-->
+        <configuration>
+          <encoding>utf-8</encoding>
+          <compilerVersion>1.8</compilerVersion>
+          <source>1.8</source>
+          <target>1.8</target>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>false</showDeprecation>
+          <compilerArgument>-Xlint:-options</compilerArgument>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>${assembly.plugin.version}</version>
+      </plugin>
+
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.1.5</version>
+        <executions>
+          <!--<execution>-->
+            <!--<goals>-->
+              <!--<goal>compile</goal>-->
+              <!--<goal>testCompile</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+          <execution>
+            <id>compile-scala</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>test-compile-scala</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <encoding>utf-8</encoding>
+          <sourceDir>src/main/scala</sourceDir>
+          <scalaVersion>${scala.version}</scalaVersion>
+          <args>
+            <arg>-unchecked</arg>
+            <arg>-deprecation</arg>
+          </args>
+          <jvmArgs>
+            <jvmArg>-Xms64m</jvmArg>
+            <jvmArg>-Xms1024m</jvmArg>
+            <jvmArg>-Xmx1024m</jvmArg>
+            <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
+            <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+          </jvmArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+
+  <modules>
+    <module>scala-utils</module>
+    <module>java-utils</module>
+  </modules>
+
 
   <dependencies>
     <dependency>
@@ -611,7 +666,11 @@
       <artifactId>quartz</artifactId>
       <version>${quartz.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>${fastjson.version}</version>
+    </dependency>
   </dependencies>
 
 
